<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_topbottom_margin"
        android:text="@string/order"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tvOdcheckin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvOdcheckin"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvOdcheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvOdcheckout"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvOdBraName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/orderBranch"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvOdMemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/odMemName"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/odNumOfGuest"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/etOdNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/odPayment"
            android:textSize="24sp"/>

        <Spinner
            android:id="@+id/spOdPayment"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="bottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/orderDetail"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnAddOrderDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/addOrderDetail"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>

