<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvRoomNoOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_padding"
        android:gravity="center"
        android:text="@string/tv_dialog_Ok"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_dialog_submit" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_dialog_cancel" />

    </LinearLayout>

</LinearLayout>
