<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".member.LoginActivity">
    <!--android:background="@drawable/side_nav_bar"-->

    <!-- 200 168 -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="168dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_leftright_margin"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/activity_leftright_margin"
        android:layout_marginBottom="@dimen/activity_topbottom_margin"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/inputId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titlePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
        <!--android:layout_marginBottom="40dp"/>-->

</LinearLayout>